@@ -120,7 +120,7 @@ public class Simulation implements Runnable {
 							}
 
 							// Próba rozmnażania
-							Animal offspring = animal1.copulate(animal2, this.worldMap.getMinCopulateEnergy());
+							Animal offspring = animal1.copulate(animal2, this.worldMap.getMinCopulateEnergy(), this.worldMap.getMaxChildMutations(),this.worldMap.getMinChildMutations() );
 							if (offspring != null) {
 								System.out.println("Dodaję potomka z energią: " + offspring.getEnergy());
 								this.worldMap.place(offspring); // Dodanie potomka na mapę
@@ -184,12 +184,12 @@ public class Simulation implements Runnable {
 	public int getNumFreeSquares() {
 		Boundary bounds = this.worldMap.getCurrentBounds();
 		int freeSpace = (bounds.upperRight().getX()-bounds.lowerLeft().getX()+1)*
-		       (bounds.upperRight().getY()-bounds.lowerLeft().getY()+1);
+				(bounds.upperRight().getY()-bounds.lowerLeft().getY()+1);
 		HashSet<Vector2d> occupiedSpace = new HashSet<>();
 		for(WorldElement elem : this.worldMap.getElements())
 			if(elem instanceof Animal animal)
 				occupiedSpace.add(elem.getPosition());
-		
+
 		return freeSpace-occupiedSpace.size();
 	}
 
@@ -201,7 +201,7 @@ public class Simulation implements Runnable {
 		return Math.round(energySum * 100.0/this.getNumAnimals())/ 100.0;
 	}
 
-    // TODO: Implement
+	// TODO: Implement
 	public List<String> getGenotypeList() {
 		HashMap<int[], Integer> countingGenoms = new HashMap<>();
 
@@ -220,13 +220,13 @@ public class Simulation implements Runnable {
 				.stream()
 				.sorted((e1, e2) -> e2.getValue().compareTo(e1.getValue())) // Sortuj malejąco po wartości
 				.map(entry -> Arrays.toString(entry.getKey()) + " (Liczba wystąpień: " + entry.getValue() + ")")
-				.collect(Collectors.toList());
+				.toList();
 
 		//return sortedGenotypes;
 		return new ArrayList<>();
 	}
 
-    public double getAverageLifespan() {
+	public double getAverageLifespan() {
 		//sredni czas zycia ZMARLYCH zwierzakow
 		int result = 0;
 		for(WorldElement elem : this.worldMap.getElements())
@@ -236,7 +236,7 @@ public class Simulation implements Runnable {
 		return Math.round(result * 100.0/this.getNumAnimals())/ 100.0;
 	}
 
-    public double getAverageNumChildren() {
+	public double getAverageNumChildren() {
 		int result = 0;
 		for(WorldElement elem : this.worldMap.getElements())
 			if(elem instanceof Animal){
@@ -244,7 +244,7 @@ public class Simulation implements Runnable {
 			}
 		return Math.round(result * 100.0/this.getNumAnimals())/ 100.0;
 
-    }
+	}
 
 	public UUID getMapId() {
 		return this.worldMap.getId();
